topbar z-index fixed

--- a/src/components/topbar/Topbar.scss
+++ b/src/components/topbar/Topbar.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     width: calc(100% - 2rem - 50px);
     position: fixed;
+    z-index: 2;
     & > .logo-x-small {
         @include mq() {
             @include icon-size(x-medium, auto);
